# node-llama-cpp

./: .commitlintrc.json  .editorconfig  .eslintrc.json  .gitattributes  .gitignore  .releaserc.json  .releaserc.ts  CHANGES.md  CONTRIBUTING.md  DEVELOPMENT.md  LICENSE  README.md  eslint.config.js  giscus.json  package-lock.json  package.json  tsconfig.json  vitest.config.ts
.config/: typedoc.css  typedoc.json
.github/: FUNDING.yml  PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug-report.yml  config.yml  documentation-issue.yml  feature-request.yml
.github/workflows/: build-binaries.yml  build.yml  prLint.yml  test-openvino.yml  test.yml
.husky/: commit-msg
.vitepress/: components.d.ts  config.ts  tsconfig.json
.vitepress/config/: BlogPageInfoPlugin.ts  apiReferenceSidebar.ts  getBlogPosts.ts  sidebar.ts
.vitepress/theme/: LayoutContainer.vue  index.ts  smoothLoad.css  style.css
.vitepress/utils/: buildHtmlHeading.ts  buildHtmlTable.ts  ensureLocalImage.ts  getCommandHtmlDoc.ts  getExcerptFromMarkdownFile.ts  getInlineCodeBlockHtml.ts  getMarkdownRenderer.ts  htmlEscape.ts  htmlEscapeWithCodeMarkdown.ts  parseCmakeListsTxtOptions.ts  renderHtmlTag.ts
assets/: logo.v3.roundEdges.avif
docs/: CUDA.md  index.md
docs/blog/: blog.data.ts  index.md  v3.12-gpt-oss.md  v3.19-gemma-4.md  v3.6-deepseek-r1.md  v3.md
docs/cli/: chat.md  cli.data.ts  complete.md  index.md  infill.md  init.md  inspect.md  pull.md  source.md
docs/guide/: CUDA.md  Metal.md  Vulkan.md  awesome.md  batching.md  building-from-source.md  chat-context-shift.md  chat-prompt-wrapper.md  chat-session.md  chat-wrapper.md  choosing-a-model.md  cmakeOptions.data.ts  contributing.md  development.md  docker.md  downloading-models.md  electron.md  embedding.md  external-chat-state.md  function-calling.md  grammar.md  index.md  llama-text.md  low-level-api.md  objects-lifecycle.md  text-completion.md  tips-and-tricks.md  token-bias.md  token-prediction.md  tokens.md  troubleshooting.md  vulkan.md
docs/public/: robots.txt
llama/: .clang-format  CMakeLists.txt  addon.cpp  binariesGithubRelease.json  binding.gyp  package.json  usedBin.json
llama/addon/: AddonContext.cpp  AddonContext.h  AddonGgufMetadata.cpp  AddonGgufMetadata.h  AddonGrammar.cpp  AddonGrammar.h  AddonGrammarEvaluationState.cpp  AddonGrammarEvaluationState.h  AddonModel.cpp  AddonModel.h  AddonModelData.cpp  AddonModelData.h  AddonModelLora.cpp  AddonModelLora.h  AddonSampler.cpp  AddonSampler.h  RingBuffer.h  addon.cpp  addonGlobals.cpp  addonGlobals.h
llama/addon/globals/: addonEnv.cpp  addonEnv.h  addonLog.cpp  addonLog.h  addonProgress.cpp  addonProgress.h  getGpuInfo.cpp  getGpuInfo.h  getMemoryInfo.cpp  getMemoryInfo.h  getProcessMemoryInfo.cpp  getProcessMemoryInfo.h  getSwapInfo.cpp  getSwapInfo.h  getSystemMemoryInfo.cpp  getSystemMemoryInfo.h
llama/cmake/: addVariantSuffix.cmake  win32.ensureNinjaPath.cmake  win32.ensureNodeLib.cmake  win32.llvmApplyGnuModeAdaptations.cmake  win32.llvmEnsureCmakeAr.cmake  win32.llvmUseGnuModeCompilers.cmake  win32.programFilesPaths.cmake
llama/gpuInfo/: cuda-gpu-info.cu  cuda-gpu-info.h  metal-gpu-info.h  metal-gpu-info.mm  vulkan-gpu-info.cpp  vulkan-gpu-info.h
llama/patches/: PR-22341.diff  PR-22566.diff  PR-22742.diff
llama/profiles/: llvm.win32.host-arm64.target-arm64.cmake  llvm.win32.host-x64.target-arm64.cmake  llvm.win32.host-x64.target-x64.cmake
llama/toolchains/: darwin.host-x64.target-arm64.cmake  linux.host-arm64.target-x64.cmake  linux.host-x64.target-arm64.cmake  linux.host-x64.target-arm71.cmake  linux.host-x64.target-arm7l.cmake  linux.host-x64.target-ppc64le.cmake  llvm.win32.host-x64.target-x64.cmake  win32.host-arm64.target-arm64.cmake  win32.host-x64.target-arm64.cmake
llama/xpack/: package.json
scripts/: movePrebuiltBinariesToStandaloneModules.ts  packTemplates.ts  postVersion.ts  prepareCreateNodeLlamaCppModuleForPublish.ts  prepareStandalonePrebuiltBinaryModules.ts  publishStandalonePrebuiltBinaryModules.ts  rerunSemanticReleaseGithubSuccess.ts  resolveLatestReleaseVersion.ts  resolveNextReleaseVersion.ts  scaffoldElectronExampleForCiBuild.ts
scripts/patches/: @semantic-release+github+11.0.0.patch  @semantic-release+npm+12.0.1.patch  @semantic-release+npm+13.1.2.patch  semantic-release+24.1.1.patch  vitepress+1.3.4.patch
src/: AbortError.ts  ChatPromptWrapper.ts  ChatWrapper.ts  LlamaChatSession.ts  LlamaModel.ts  TemplateChatWrapper.ts  apiDocsIndex.ts  apiDocsOverrides.ts  commands.ts  config.ts  consts.ts  index.ts  state.ts  types.ts
src/bindings/: AddonTypes.ts  Llama.ts  consts.ts  getLlama.ts  types.ts
src/chatWrappers/: AlpacaChatWrapper.ts  ChatMLChatPromptWrapper.ts  ChatMLChatWrapper.ts  ChatMLPromptWrapper.ts  DeepSeekChatWrapper.ts  EmptyChatPromptWrapper.ts  EmptyChatWrapper.ts  FalconChatPromptWrapper.ts  FalconChatWrapper.ts  FunctionaryChatWrapper.ts  Gemma4ChatWrapper.ts  GemmaChatWrapper.ts  GeneralChatPromptWrapper.ts  GeneralChatWrapper.ts  HarmonyChatWrapper.ts  Llama2ChatWrapper.ts  Llama3ChatWrapper.ts  Llama3_1ChatWrapper.ts  Llama3_2LightweightChatWrapper.ts  LlamaChatPromptWrapper.ts  LlamaChatWrapper.ts  MistralChatWrapper.ts  QwenChatWrapper.ts  SeedChatWrapper.ts  createChatWrapperByBos.ts  generateContextTextFromConversationHistory.ts  resolveChatWrapperBasedOnModel.ts
src/cli/: cli.ts  projectTemplates.ts  recommendedModels.ts  startCreateCli.ts
src/evaluator/: LlamaCompletion.ts  LlamaEmbedding.ts  LlamaEmbeddingContext.ts  LlamaGrammar.ts  LlamaGrammarEvaluationState.ts  LlamaJsonSchemaGrammar.ts  LlamaModel.ts  LlamaRankingContext.ts  TokenBias.ts  TokenMeter.ts
src/gguf/: GGUFInsights.ts  GGUFMetadata.ts  GgufInsights.ts  consts.ts  getGgufFileInfo.ts  parseGgufMetadata.ts  readGgufFileInfo.ts
src/llamaBin/: Llama.ts  getLlama.ts
src/llamaEvaluator/: LlamaBins.ts  LlamaChatSession.ts  LlamaContext.ts  LlamaEmbeddingContext.ts  LlamaGrammar.ts  LlamaGrammarEvaluationState.ts  LlamaJsonSchemaGrammar.ts  LlamaModel.ts
templates/: .gitignore  README.md  package-lock.json  package.json
(+509 files in other folders)
